--- a/index.html
+++ b/index.html
@@ -2768,6 +2768,29 @@
             <span class="toolbar-text transition">顶部</span>
         </a>
     </div>
+<!--电梯-->
+<div class="elevator" id="elevator">
+    <a href="javascript:;" class="elevator-item link elevator-active">
+        <span class="elevator-num">F1</span>
+        <span class="elevator-text">服饰</span>
+    </a>
+    <a href="javascript:;" class="elevator-item link">
+        <span class="elevator-num">F2</span>
+        <span class="elevator-text">美妆</span>
+    </a>
+    <a href="javascript:;" class="elevator-item link">
+        <span class="elevator-num">F3</span>
+        <span class="elevator-text">手机</span>
+    </a>
+    <a href="javascript:;" class="elevator-item link">
+        <span class="elevator-num">F4</span>
+        <span class="elevator-text">电器</span>
+    </a>
+    <a href="javascript:;" class="elevator-item link">
+        <span class="elevator-num">F5</span>
+        <span class="elevator-text">电脑</span>
+    </a>
+</div>
     <script src="js/jquery.js"></script>
     <script src="js/search.js"></script>
     <script src="js/banner.js"></script>
